# dram

./: CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake
src/: AXIHelper.cpp  AXIHelper.h  AxiDramsysModel.cpp  AxiDramsysModel.h  AxiDramsysSystem.cpp  AxiDramsysSystem.h  AxiToTlmBridge.cpp  AxiToTlmBridge.h  sc_main.cpp
src/DRAMSys/configs/: lpddr4-example.json  lpddr4.json  lpddr5.json  test.json
src/DRAMSys/configs/addressmapping/: am_lpddr4_32Mbx16.json  am_lpddr5_8Gbx16_4bg_4b_brc.json
src/DRAMSys/configs/memspec/: Custom_DDR4_PHY_Timing.json  JEDEC_32Mb_LPDDR4-400_16bit.json  JEDEC_8Gb_LPDDR4-3200_16bit.json  JEDEC_8Gb_LPDDR5-6400_16bit.json
src/DRAMSys/configs/simconfig/: example.json
src/DRAMSys/lib/DRAMPower/src/DRAMPower/DRAMPower/dram/: Interface.h
src/DRAMSys/lib/DRAMUtils/: CMakeLists.txt  CMakePresets.json
src/DRAMSys/lib/DRAMUtils/include/: CMakeLists.txt
src/DRAMSys/lib/DRAMUtils/include/DRAMUtils/DRAMUtils/memspec/: BaseMemSpec.h  MemSpec.h
src/DRAMSys/lib/DRAMUtils/include/DRAMUtils/DRAMUtils/memspec/standards/: MemSpecDDR4.h  MemSpecDDR5.h  MemSpecHBM2.h  MemSpecHBM3.h  MemSpecHBM4.h  MemSpecLPDDR4.h  MemSpecLPDDR5.h
src/DRAMSys/lib/DRAMUtils/include/DRAMUtils/DRAMUtils/util/: collapsingvector.h  id_variant.h  json.h  json_utils.h  types.h
src/DRAMSys/lib/DRAMUtils/lib/nlohmann_json/: CMakeLists.txt
src/DRAMSys/lib/DRAMUtils/tests/: CMakeLists.txt
src/DRAMSys/lib/DRAMUtils/tests/tests_memspec/: CMakeLists.txt
src/DRAMSys/src/configuration/DRAMSys/config/: DRAMSysConfiguration.cpp  DRAMSysConfiguration.h
src/DRAMSys/src/libdramsys/: CMakeLists.txt
src/DRAMSys/src/libdramsys/DRAMSys/configuration/memspec/: MemSpecLPDDR5.cpp  MemSpecLPDDR5.h  lpddr5-example.json
src/DRAMSys/src/libdramsys/DRAMSys/controller/: Controller.cpp
src/DRAMSys/src/libdramsys/DRAMSys/controller/checker/: CheckerLPDDR5.cpp  CheckerLPDDR5.h
src/DRAMSys/src/libdramsys/DRAMSys/simulation/: DRAMSys.cpp
src/DRAMSys/src/simulator/simulator/: Cache.cpp  Cache.h
src/tlm2-interfaces/: CMakeLists.txt
src/tlm2-interfaces/chi/: chi_tlm.h
tests/: TestAXIMaster.h  bridge_test.cpp  cxx_model_test.cpp  dramsys_lpddr4_test.cpp
