# --- 1. é¡¹ç›®åŸºæœ¬é…ç½® ---
# å‚è€ƒCMAkeç‰ˆæœ¬å’ŒC++æ ‡å‡†è®¾ç½®
cmake_minimum_required(VERSION 3.22)
project(DramsysAxiSimulation CXX)
option(SC_FORCE_SHARED "Build SystemC/DRAMSys dependencies as shared libraries" ON)
if(SC_FORCE_SHARED)
    set(BUILD_SHARED_LIBS ON CACHE BOOL "Build shared libraries" FORCE)
endif()

# Mirror booksim2 style: allow external script-based build by default
if(CMAKE_BUILD_TYPE STREQUAL "Release")
    set(build_type "rel")
elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(build_type "dbg")
elseif(CMAKE_BUILD_TYPE STREQUAL "DebugWithASan")
    set(build_type "dbg_asan")
else()
    set(build_type "rel")
endif()

option(DRAMSYS_NATIVE_INTEGRATION "Build DRAMSys/bridge natively in this CMake (OFF=script like booksim2)" OFF)

if(NOT DRAMSYS_NATIVE_INTEGRATION)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../build_dramsys.sh")
        add_custom_target(build_dramsys ALL
            COMMAND bash ../build_dramsys.sh ${build_type}
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
            VERBATIM)
        message(STATUS "DRAMSys external build enabled (booksim2 style): build_dramsys -> ../build_dramsys.sh ${build_type}")
    else()
        message(WARNING "External script ../build_dramsys.sh not found; switching to native integration.")
        set(DRAMSYS_NATIVE_INTEGRATION ON CACHE BOOL "Build DRAMSys/bridge natively in this CMake" FORCE)
    endif()
endif()

if(DRAMSYS_NATIVE_INTEGRATION)

# CMake policies / compatibility tweaks for dependencies
if(POLICY CMP0167)
    # Enable legacy FindBoost module for subprojects relying on it
    cmake_policy(SET CMP0167 OLD)
endif()

# Ensure subprojects that call their own cmake_minimum_required also inherit policy defaults
set(CMAKE_POLICY_DEFAULT_CMP0167 OLD)
set(CMAKE_POLICY_DEFAULT_CMP0144 NEW)

# Prefer using in-repo Boost if present (project root/boost or DRAMSys/lib/boost)
# This helps both this project and subprojects find headers/libs without system installs
set(_BOOST_CANDIDATES)
get_filename_component(_BOOST_CAND_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../boost" ABSOLUTE)
list(APPEND _BOOST_CANDIDATES "${_BOOST_CAND_ROOT}")
get_filename_component(_BOOST_CAND_DRAMSYS "${DRAMSYS_PATH}/lib/boost" ABSOLUTE)
list(APPEND _BOOST_CANDIDATES "${_BOOST_CAND_DRAMSYS}")

foreach(_cand IN LISTS _BOOST_CANDIDATES)
    if(EXISTS "${_cand}" AND EXISTS "${_cand}/boost")
        set(BOOST_ROOT "${_cand}" CACHE PATH "Boost root directory (in-repo)" FORCE)
        set(Boost_ROOT "${_cand}" CACHE PATH "" FORCE)
        set(Boost_INCLUDE_DIR "${_cand}" CACHE PATH "" FORCE)
        if(EXISTS "${_cand}/stage/lib")
            set(BOOST_LIBRARYDIR "${_cand}/stage/lib" CACHE PATH "" FORCE)
            set(Boost_LIBRARY_DIR "${_cand}/stage/lib" CACHE PATH "" FORCE)
        elseif(EXISTS "${_cand}/lib")
            set(BOOST_LIBRARYDIR "${_cand}/lib" CACHE PATH "" FORCE)
            set(Boost_LIBRARY_DIR "${_cand}/lib" CACHE PATH "" FORCE)
        endif()
        # Also export environment hints for nested subprojects using FindBoost
        set(ENV{BOOST_ROOT} "${_cand}")
        if(DEFINED BOOST_LIBRARYDIR)
            set(ENV{BOOST_LIBRARYDIR} "${BOOST_LIBRARYDIR}")
        endif()
        message(STATUS "Boost hint: using in-repo Boost at ${_cand}")
        break()
    endif()
endforeach()

# Prefer classic FindBoost over BoostConfig (more common with prebuilt Boost)
set(Boost_NO_BOOST_CMAKE ON CACHE BOOL "Prefer FindBoost module over BoostConfig" FORCE)
# Prefer multi-threaded libs; allow static or shared depending on what's available
set(Boost_USE_MULTITHREADED ON CACHE BOOL "" FORCE)
# You can flip this if you only built static libs with b2
set(Boost_USE_STATIC_LIBS OFF CACHE BOOL "Prefer dynamic Boost libs by default" FORCE)

# Optionally pre-discover Boost to pass hints to subprojects (quietly)
find_package(Boost 1.70 QUIET COMPONENTS system date_time filesystem)
if(NOT Boost_FOUND)
    message(STATUS "Boost 1.70+ not found yet (components: system, date_time, filesystem). Set Boost_ROOT/BOOST_ROOT to your local Boost or install Boost.")
endif()

# è®©å­é¡¹ç›®ä¹Ÿèƒ½æ‰¾åˆ°æˆ‘ä»¬æä¾›çš?Find*.cmake æ¨¡å—
list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
# ç¡®ä¿å­é¡¹ç›®ä¹Ÿèƒ½ç»§æ‰¿åˆ°æˆ‘ä»¬è‡ªå®šä¹‰çš„ Find æ¨¡å—ï¼ˆé€šè¿‡ Cache å¼ºåŒ–ä½œç”¨åŸŸï¼‰
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" CACHE STRING "Module search path (includes ${CMAKE_CURRENT_SOURCE_DIR}/cmake)" FORCE)
find_package(fmt QUIET)
find_package(spdlog QUIET)
find_package(yaml-cpp QUIET)

# Avoid install/export checks for bundled subprojects during this build
set(CMAKE_SKIP_INSTALL_RULES ON CACHE BOOL "Skip install() rules for subprojects" FORCE)

# ç»Ÿä¸€ä½¿ç”¨ C++20ï¼Œä¾¿äºä¸ä¸Šå±‚å·¥ç¨‹ï¼ˆesl_modelï¼‰ä¸€è‡´ï¼Œé¿å… SystemC API ç‰ˆæœ¬ç¬¦å·ä¸åŒ¹é…
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# --- 2. ç¼–è¯‘æ ‡å¿—ç®¡ç† ---
# æ±‡é›†ç¼–è¯‘å®šä¹‰å’Œé€‰é¡¹ï¼Œå‚è€ƒäº†æ‚¨æä¾›çš„ç¤ºä¾‹é£æ ¼
# -fPIC: ç”Ÿæˆä½ç½®æ— å…³ä»£ç ï¼Œå¯¹äºå…±äº«åº“æ˜¯å¿…éœ€çš?# -DSC_INCLUDE_DYNAMIC_PROCESSES: SystemCåŠ¨æ€è¿›ç¨‹æ‰€éœ€
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -DSC_INCLUDE_DYNAMIC_PROCESSES -D_GNU_SOURCE")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter")

# æ ¹æ®æ„å»ºç±»å‹æ·»åŠ ç‰¹å®šçš„è°ƒè¯•æ ‡å¿
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    message(STATUS "Build type: Debug")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -ggdb")
elseif(CMAKE_BUILD_TYPE STREQUAL "DebugWithASan")
    message(STATUS "Build type: DebugWithASan")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -ggdb -fsanitize=address")
    link_libraries(asan)
endif()

# --- 3. ä¾èµ–é¡¹è·¯å¾„é…ç½?---
# ç”¨æˆ·éœ€è¦æ ¹æ®å®é™…æƒ…å†µä¿®æ”¹è¿™äº›è·¯å¾
set(SYSTEMC_PATH "../systemc-2.3.4" CACHE PATH "Path to SystemC root directory")
# æŒ‡å‘æœ¬ä»“åº“è‡ªå¸¦çš„ DRAMSys æºç ä½ç½®
set(DRAMSYS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/src/DRAMSys" CACHE PATH "Path to DRAMSys root directory")
# ç¼ºçœæŒ‡å‘ DRAMSYS_PATH/lib/SystemC-Componentsï¼ˆå¯è¢«å‘½ä»¤è¡Œè¦†ç›–ï¼‰ï¼Œæ— éœ€åœ¨å‘½ä»¤è¡Œæ˜¾å¼ä¼ å…¥
# scc-sysc ä¸å†ä½œä¸ºä¾èµ–é¡¹ä½¿ç”¨ï¼Œç›¸å…³é›†æˆå·²ç§»é™?
# è‹?SystemC æºç å·²æ”¾åˆ?DRAMSys ä¸‹ï¼Œåˆ™ä¼˜å…ˆè®© DRAMSys æ„å»ºå¹¶æä¾?SystemC ç›®æ ‡
if(EXISTS "${DRAMSYS_PATH}/lib/systemc-2.3.4")
    get_filename_component(_ABS_SYSTEMC_PRE "${DRAMSYS_PATH}/lib/systemc-2.3.4" ABSOLUTE)
    set(DRAMSYS_USE_FETCH_CONTENT_SYSTEMC ON CACHE BOOL "" FORCE)
    set(FETCHCONTENT_SOURCE_DIR_SYSTEMCLANGUAGE "${_ABS_SYSTEMC_PRE}" CACHE PATH "" FORCE)
endif()

# --- 4. ä¾èµ–/FetchContent é€‰é¡¹ ---
# ç¼ºçœå…³é—­å…¨å±€ FetchContentï¼Œä½†è‹¥æœ¬ä»“åº“å·²è‡ªå¸¦æŸäº›ä¸‰æ–¹åº“æºç ï¼Œåˆ™é’ˆå¯¹æ€§å¼€å¯å¯¹åº”å¼€å…
set(DRAMSYS_USE_FETCH_CONTENT OFF CACHE BOOL "Enable FetchContent for DRAMSys")

# å¦‚æœ DRAMSys/lib/sqlite3 å­˜åœ¨ï¼Œåˆ™å¼€å¯ç”± DRAMSys å†…éƒ¨æ‹‰å–/æ„å»º SQLite3 çš„è·¯å¾„ï¼Œé¿å…ç³»ç»Ÿçº§å®‰è£…ä¾èµ
if(EXISTS "${DRAMSYS_PATH}/lib/sqlite3")
    set(DRAMSYS_USE_FETCH_CONTENT_SQLITE3 ON CACHE BOOL "Fetch SQLite3 for DRAMSys" FORCE)
else()
    set(DRAMSYS_USE_FETCH_CONTENT_SQLITE3 OFF CACHE BOOL "Fetch SQLite3 for DRAMSys" FORCE)
endif()

set(DRAMSYS_USE_FETCH_CONTENT_INTERNAL OFF CACHE BOOL "Fetch DRAMUtils/DRAMPower for DRAMSys")
set(DRAMSYS_USE_FETCH_CONTENT_SYSTEMC OFF CACHE BOOL "Fetch SystemC for DRAMSys")

# æ˜¯å¦å°?DRAMSys ä½œä¸ºå­é¡¹ç›®æ„å»ºï¼ˆadd_subdirectoryï¼‰ï¼Œé»˜è®¤å…³é—­ä»¥ä¼˜å…ˆä½¿ç”¨é¢„ç¼–è¯‘åº
set(DRAMSYS_USE_SUBPROJECT ON CACHE BOOL "Build DRAMSys from source via add_subdirectory (default ON)")

# å¯é€‰ï¼šç›´æ¥æŒ‡å®šé¢„ç¼–è¯‘çš„ libdramsys è·¯å¾„
set(DRAMSYS_LIB "" CACHE FILEPATH "Path to prebuilt libdramsys (optional)")

## Arteris tlm2-interfaces
# ä¸åœ¨æ­¤å¤„å•ç‹¬ç¼–è¯‘ï¼Œæ”¹ä¸ºä»…åŒ…å«å…¶å¤´æ–‡ä»¶ï¼Œç”± DRAMSys/SCC ç«¯æä¾›æ‰€éœ€å®ç°ã€
set(ARTERIS_PATH "${DRAMSYS_PATH}/lib/tlm2-interfaces" CACHE PATH "Path to tlm2-interfaces headers (default DRAMSys/lib/tlm2-interfaces)")

# å¦‚æœä¸ä» DRAMSys è·å– SystemCï¼Œåˆ™å°è¯•ä½¿ç”¨æœ¬åœ° SystemC å¹¶æä¾?SystemC::systemc ç›®æ ‡
if(NOT DRAMSYS_USE_FETCH_CONTENT_SYSTEMC)
    find_library(systemc_lib
        NAMES systemc libsystemc.so libsystemc.a
        PATHS "${SYSTEMC_PATH}/build/src" "${SYSTEMC_PATH}/lib" "${SYSTEMC_PATH}/lib-linux64"
        NO_DEFAULT_PATH)
    if(NOT systemc_lib)
        message(FATAL_ERROR "SystemC library not found in path: ${SYSTEMC_PATH}")
    endif()
    if(NOT TARGET SystemC::systemc)
        add_library(SystemC::systemc UNKNOWN IMPORTED)
        set_target_properties(SystemC::systemc PROPERTIES
            IMPORTED_LOCATION "${systemc_lib}"
            INTERFACE_INCLUDE_DIRECTORIES "${SYSTEMC_PATH}/include;${SYSTEMC_PATH}/src"
        )
    endif()
endif()


# --- 5. å®šä¹‰æ‚¨çš„ä»¿çœŸç›®æ ‡ (æ”¹ä¸ºæ„å»ºå…±äº«åº? ---
# å°†ä»¿çœŸå™¨æœ¬èº«æ„å»ºä¸ºä¸€ä¸ªå…±äº«åº“ï¼Œè€Œä¸æ˜¯å¯æ‰§è¡Œæ–‡ä»¶
## è§£æ DRAMSys ç›®æ ‡ï¼ˆåŒ…/å­ç›®å½?é¢„ç¼–è¯‘ï¼‰
if(NOT DEFINED DRAMSYS_TARGET OR DRAMSYS_TARGET STREQUAL "")
    # A) æ˜ç¡®æŒ‡å®šäº†é¢„ç¼–è¯‘åº?
    if(DRAMSYS_LIB)
        if(EXISTS "${DRAMSYS_LIB}")
            add_library(DRAMSys::libdramsys UNKNOWN IMPORTED)
            set_target_properties(DRAMSys::libdramsys PROPERTIES IMPORTED_LOCATION "${DRAMSYS_LIB}")
            set(DRAMSYS_TARGET DRAMSys::libdramsys)
            message(STATUS "Using prebuilt DRAMSys library (explicit): ${DRAMSYS_LIB}")
        else()
            message(FATAL_ERROR "DRAMSYS_LIB is set but file does not exist: ${DRAMSYS_LIB}")
        endif()
    endif()

    # B) å°è¯•å·²å®‰è£…çš„ CMake åŒ?
    if(NOT DRAMSYS_TARGET)
        find_package(DRAMSys QUIET CONFIG)
        if(TARGET DRAMSys::libdramsys)
            set(DRAMSYS_TARGET DRAMSys::libdramsys)
            message(STATUS "Found DRAMSys package: using DRAMSys::libdramsys")
        endif()
    endif()

    # C) å¯é€‰ï¼šä½œä¸ºå­é¡¹ç›®æ„å»ºï¼ˆä»…å½“å¼€å?DRAMSYS_USE_SUBPROJECTï¼?
    if(NOT DRAMSYS_TARGET AND DRAMSYS_USE_SUBPROJECT AND EXISTS "${DRAMSYS_PATH}/CMakeLists.txt")
        message(STATUS "Adding DRAMSys as subdirectory from: ${DRAMSYS_PATH}")

        # æ³¨æ„ï¼šä¸å†åœ¨æ­¤å¤„å¼•å…¥ sqlite3ï¼ŒSystemC-Components/third_party å·²è‡ªå¸¦å¹¶ç”±å…¶ CMake ç»Ÿä¸€å¤„ç†

        if(EXISTS "${DRAMSYS_PATH}/lib/DRAMUtils")
            get_filename_component(_ABS_DRAMUTILS "${DRAMSYS_PATH}/lib/DRAMUtils" ABSOLUTE)
            set(DRAMSYS_USE_FETCH_CONTENT_INTERNAL ON CACHE BOOL "" FORCE)
            # æ³¨æ„ï¼šFetchContent å˜é‡åéœ€å…¨å¤§å†?
            set(FETCHCONTENT_SOURCE_DIR_DRAMUTILS "${_ABS_DRAMUTILS}" CACHE PATH "" FORCE)
            message(STATUS "Using local DRAMUtils source: ${FETCHCONTENT_SOURCE_DIR_DRAMUTILS}")
        endif()
        if(EXISTS "${DRAMSYS_PATH}/lib/DRAMPower")
            get_filename_component(_ABS_DRAMPOWER "${DRAMSYS_PATH}/lib/DRAMPower" ABSOLUTE)
            set(DRAMSYS_USE_FETCH_CONTENT_INTERNAL ON CACHE BOOL "" FORCE)
            set(FETCHCONTENT_SOURCE_DIR_DRAMPOWER "${_ABS_DRAMPOWER}" CACHE PATH "" FORCE)
            message(STATUS "Using local DRAMPower source: ${FETCHCONTENT_SOURCE_DIR_DRAMPOWER}")
        endif()

        if(EXISTS "${DRAMSYS_PATH}/lib/nlohmann_json")
            get_filename_component(_ABS_NLOHMANN "${DRAMSYS_PATH}/lib/nlohmann_json" ABSOLUTE)
            set(DRAMSYS_USE_FETCH_CONTENT_NLOHMANN_JSON ON CACHE BOOL "" FORCE)
            set(FETCHCONTENT_SOURCE_DIR_NLOHMANN_JSON "${_ABS_NLOHMANN}" CACHE PATH "" FORCE)
            message(STATUS "Using local nlohmann_json source: ${FETCHCONTENT_SOURCE_DIR_NLOHMANN_JSON}")
        endif()

        if(EXISTS "${DRAMSYS_PATH}/lib/systemc-2.3.4")
            get_filename_component(_ABS_SYSTEMC "${DRAMSYS_PATH}/lib/systemc-2.3.4" ABSOLUTE)
            set(DRAMSYS_USE_FETCH_CONTENT_SYSTEMC ON CACHE BOOL "" FORCE)
            set(FETCHCONTENT_SOURCE_DIR_SYSTEMCLANGUAGE "${_ABS_SYSTEMC}" CACHE PATH "" FORCE)
            message(STATUS "Using local SystemC source: ${FETCHCONTENT_SOURCE_DIR_SYSTEMCLANGUAGE}")
        endif()

        # Prefer local SQLite amalgamation if present to avoid network downloads
        if(EXISTS "${DRAMSYS_PATH}/lib/sqlite3")
            # Common layouts: lib/sqlite3/sqlite-amalgamation or sqlite-amalgamation-xxxxx
            set(_SQLITE_CANDIDATES
                "${DRAMSYS_PATH}/lib/sqlite3/sqlite-amalgamation"
            )
            file(GLOB _SQLITE_GLOB "${DRAMSYS_PATH}/lib/sqlite3/sqlite-amalgamation*")
            list(APPEND _SQLITE_CANDIDATES ${_SQLITE_GLOB})
            foreach(_cand ${_SQLITE_CANDIDATES})
                if(EXISTS "${_cand}/sqlite3.c")
                    get_filename_component(_ABS_SQLITE "${_cand}" ABSOLUTE)
                    set(DRAMSYS_USE_FETCH_CONTENT_SQLITE3 ON CACHE BOOL "" FORCE)
                    set(FETCHCONTENT_SOURCE_DIR_SQLITE3 "${_ABS_SQLITE}" CACHE PATH "" FORCE)
                    # Optional: avoid any network fetches once local is provided
                    set(FETCHCONTENT_FULLY_DISCONNECTED ON CACHE BOOL "" FORCE)
                    message(STATUS "Using local SQLite3 amalgamation: ${FETCHCONTENT_SOURCE_DIR_SQLITE3}")
                    break()
                endif()
            endforeach()
        endif()

        # è‹¥ä»»ä½•å­ä¾èµ–ä½¿ç”¨äº?FetchContentï¼Œåˆ™æ‰“å¼€æ€»å¼€å…?
        if(DRAMSYS_USE_FETCH_CONTENT_INTERNAL OR DRAMSYS_USE_FETCH_CONTENT_SYSTEMC OR DRAMSYS_USE_FETCH_CONTENT_NLOHMANN_JSON OR DRAMSYS_USE_FETCH_CONTENT_SQLITE3)
            set(DRAMSYS_USE_FETCH_CONTENT ON CACHE BOOL "" FORCE)
        endif()

        # å°†å¼€å…³ä¼ é€’ç»™ DRAMSysï¼ˆå…¶ä½™ä¿æŒç”¨æˆ·åœ¨å‘½ä»¤è¡Œä¼ å…¥çš„è®¾ç½®ï¼?
        set(DRAMSYS_USE_FETCH_CONTENT ${DRAMSYS_USE_FETCH_CONTENT} CACHE BOOL "" FORCE)
        set(DRAMSYS_USE_FETCH_CONTENT_INTERNAL ${DRAMSYS_USE_FETCH_CONTENT_INTERNAL} CACHE BOOL "" FORCE)
        set(DRAMSYS_USE_FETCH_CONTENT_NLOHMANN_JSON ${DRAMSYS_USE_FETCH_CONTENT_NLOHMANN_JSON} CACHE BOOL "" FORCE)
        set(DRAMSYS_USE_FETCH_CONTENT_SYSTEMC ${DRAMSYS_USE_FETCH_CONTENT_SYSTEMC} CACHE BOOL "" FORCE)

        # Ensure legacy SystemC CMake files request policies available in CMake 4.x
        set(_SC_POLICY_MIN_WAS_DEFINED FALSE)
        if(DEFINED CMAKE_POLICY_VERSION_MINIMUM)
            set(_SC_POLICY_MIN_WAS_DEFINED TRUE)
            set(_SC_PREV_POLICY_MIN "${CMAKE_POLICY_VERSION_MINIMUM}")
            if(CMAKE_POLICY_VERSION_MINIMUM VERSION_LESS "3.5")
                set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
            endif()
        else()
            set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
        endif()

        add_subdirectory(${DRAMSYS_PATH} ${CMAKE_CURRENT_BINARY_DIR}/dramsys_build)

        if(_SC_POLICY_MIN_WAS_DEFINED)
            set(CMAKE_POLICY_VERSION_MINIMUM "${_SC_PREV_POLICY_MIN}")
        else()
            unset(CMAKE_POLICY_VERSION_MINIMUM)
        endif()
        unset(_SC_POLICY_MIN_WAS_DEFINED)
        unset(_SC_PREV_POLICY_MIN)
        # è‹?DRAMSys æ„å»ºå‡ºäº† 'systemc' ç›®æ ‡è€Œæœªæä¾›åˆ«åï¼Œåˆ™åˆ›å»ºåˆ«åä»¥å…¼å®¹ä¸‹æ¸?
        if(TARGET systemc AND NOT TARGET SystemC::systemc)
            add_library(SystemC::systemc ALIAS systemc)
        endif()
        if(TARGET DRAMSys::libdramsys)
            set(DRAMSYS_TARGET DRAMSys::libdramsys)
        endif()
    endif()

    # D) åœ¨é»˜è®¤çš„è¾“å‡ºç›®å½•çŒœæµ‹é¢„ç¼–è¯‘åº“
    if(NOT DRAMSYS_TARGET)
        find_library(_dramsys_guess
            NAMES libdramsys dramsys libdramsys.so libdramsys.a
            PATHS "${DRAMSYS_PATH}/build/src/libdramsys" "${DRAMSYS_PATH}/lib" "${DRAMSYS_PATH}/build"
            NO_DEFAULT_PATH)
        if(_dramsys_guess)
            add_library(DRAMSys::libdramsys UNKNOWN IMPORTED)
            set_target_properties(DRAMSys::libdramsys PROPERTIES IMPORTED_LOCATION "${_dramsys_guess}")
            set(DRAMSYS_TARGET DRAMSys::libdramsys)
            message(STATUS "Using prebuilt DRAMSys library (guessed): ${_dramsys_guess}")
        endif()
    endif()

    if(NOT DRAMSYS_TARGET)
        message(FATAL_ERROR "DRAMSys not found. Options: (1) set DRAMSYS_LIB to prebuilt libdramsys; (2) install DRAMSys CMake package; (3) enable DRAMSYS_USE_SUBPROJECT and satisfy dependencies.")
    endif()
endif()

add_library(axi_dramsys_bridge STATIC
    src/AxiToTlmBridge.cpp
)

# --- 6. è®¾ç½®åŒ…å«ç›®å½• ---
target_include_directories(axi_dramsys_bridge
    PUBLIC
        # æœ¬é¡¹ç›®å¤´æ–‡ä»¶ï¼ˆä¾›ä¾èµ–è¯¥åº“çš„ç›®æ ‡ä½¿ç”¨ï¼‰
        "${CMAKE_CURRENT_SOURCE_DIR}/src"
        "${CMAKE_CURRENT_SOURCE_DIR}/src/tlm2-interfaces"
    PRIVATE
        # DRAMSys åº“å¤´æ–‡ä»¶ï¼ˆä»…åº“è‡ªèº«éœ€è¦ï¼‰
        "${DRAMSYS_PATH}/src/libdramsys"
        "${DRAMSYS_PATH}/include"
)

# --- 7. é“¾æ¥åº?---
target_link_libraries(axi_dramsys_bridge PRIVATE SystemC::systemc ${DRAMSYS_TARGET})

# --- 9. æµ‹è¯•å¯æ‰§è¡Œç¨‹åº?---
add_executable(bridge_test tests/bridge_test.cpp)
target_link_libraries(bridge_test PRIVATE SystemC::systemc axi_dramsys_bridge)

# DRAMSys LPDDR4 integration test (128B AXI -> segmented DRAM beats)
add_executable(dramsys_lpddr4_test tests/dramsys_lpddr4_test.cpp)
target_link_libraries(dramsys_lpddr4_test PRIVATE SystemC::systemc axi_dramsys_bridge ${DRAMSYS_TARGET})
target_include_directories(dramsys_lpddr4_test PRIVATE
    "${DRAMSYS_PATH}/src"
    "${DRAMSYS_PATH}/include")
target_compile_definitions(dramsys_lpddr4_test PRIVATE SRC_ROOT_DIR="${CMAKE_CURRENT_SOURCE_DIR}")

# --- 8. å®‰è£…ç›®æ ‡ ---
# å°†ç”Ÿæˆçš„å…±äº«åº“å®‰è£…åˆ°æŒ‡å®šçš„libç›®å½•ä¸?install(TARGETS axi_dramsys_bridge LIBRARY DESTINATION lib)
endif() # DRAMSYS_NATIVE_INTEGRATION
